# django511-boilerplate

./: Dockerfile  README.md  clean_requirement.py  docker-compose.yml  pyproject.toml  v1.requirements.txt
main/main/: settings.py  urls.py
scripts/: start.sh
